--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -4,3 +4,13 @@
   <%= render :partial => "form" %>
 
 <% end %>
+
+<% if @user_is_admin %>
+    <h4>Merge Articles</h4>
+    <% merge_action = "/admin/content/merge/#{@article.id}" %>
+    <%= form_tag(merge_action, multipart: true) do %>
+      <%= label_tag 'merge_with', 'Article ID' %>
+      <%= text_field_tag 'merge_with' %>
+      <%= submit_tag 'Merge' %>
+    <% end %>
+<% end %>
