--- a/app/views/admin/shared/_edit.html.erb
+++ b/app/views/admin/shared/_edit.html.erb
@@ -4,7 +4,7 @@
   <%= render :partial => "form" %>
 
 <% end %>
-
+logger.info(@user_is_admin)
 <% if @user_is_admin %>
     <h4>Merge Articles</h4>
     <% merge_action = "/admin/content/merge/#{@article.id}" %>
